--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 orbs:
-  # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
+  # orgs contain basic recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@5.0.2
   eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.1
-  # different jobs are calles later in the workflows sections
+  # different jobs are calls later in the workflows sections
 jobs:
   build:
     docker:
@@ -13,37 +13,42 @@ jobs:
     steps:
       # install node and checkout code
       - node/install:
-          node-version: '14.15'         
+          node-version: '14.15'
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
           command: |
-            echo "NODE --version" 
+            echo "NODE --version"
             echo $(node --version)
-            echo "NPM --version" 
+            echo "NPM --version"
             echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API          
       - run:
           name: Install API Dependencies
           command: |
-           echo "TODO: Install dependencies in the the backend API  "
-      # TODO: Lint the frontend
+            echo "Install dependencies in the the backend API"
+            npm run api:install
       - run:
           name: Front-End Lint
           command: |
-            echo "TODO: Lint the frontend"
-      # TODO: Build the frontend app
+            echo "Lint the frontend"
+            npm run frontend:lint
       - run:
           name: Front-End Build
           command: |
-            echo "TODO: Build the frontend app"
-      # TODO: Build the backend API      
+            echo "Build the frontend app"
+            npm run frontend:build
       - run:
           name: API Build
           command: |
-            echo "TODO: Build the backend API"
+            echo "Build the backend API"
+            npm run api:build
+      - run:
+          name: Front-End Test
+          command: |
+            echo "Test the frontend"
+            npm run frontend:test
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -51,7 +56,7 @@ jobs:
       # more setup needed for aws, node, elastic beanstalk
     steps:
       - node/install:
-          node-version: '14.15' 
+          node-version: '14.15'
       - eb/setup
       - aws-cli/setup
       - checkout
@@ -59,8 +64,8 @@ jobs:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
-            echo "# TODO: Install, build, deploy in both apps"
-            
+            echo "# Install, build, deploy in both apps"
+            npm run deploy
 workflows:
   udagram:
     jobs:
