--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve",
     "build": "ng build",
     "deploy": "chmod +x bin/deploy.sh && bin/deploy.sh",
-    "test": "ng test",
+    "test": "ng test --watch=false --browsers ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
