--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: udagram-api-revz-dev
+    environment: udagram-api-revz-env
     group_suffix: null
   deploy:
     artifact: www/Archive.zip
@@ -9,7 +9,7 @@ global:
   branch: null
   default_ec2_keyname: null
   default_platform: Node.js 14
-  default_region: us-east-1
+  default_region: us-west-2
   include_git_submodules: true
   instance_profile: null
   platform_name: null
